--- a/safety.html
+++ b/safety.html
@@ -5,7 +5,7 @@
 		covid|Safety Guide
 	</title>
 	
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	
 </head>
