--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 		covid|ContactUs
 	</title>
 	
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
